<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_span="3"
    tools:context="com.httpmilenacabrera.organizaciondevistas.TableActivity">

   <TableRow>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_1_1"
          android:background="@color/colorGraySoft"
          android:layout_weight="3"
          android:gravity="center"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center"
          android:text="@string/_1_2"
          android:background="@color/colorGraySoft"
          android:layout_weight="3"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
      <TextView
          android:layout_width="wrap_content"
          android:gravity="center"
          android:layout_height="40dp"
          android:text="@string/_1_3"
          android:background="@color/colorGraySoft"
          android:layout_weight="3"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
   </TableRow>

   <TableRow>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_2_1"
          android:background="@color/colorGraySoft"
          android:gravity="center"
          android:layout_weight="3"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_2_2"
          android:background="@color/colorGraySoft"
          android:gravity="center"
          android:layout_weight="3"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_2_3"
          android:background="@color/colorGraySoft"
          android:gravity="center"
          android:layout_weight="3"
          android:layout_margin="10dp"
          android:layout_gravity="center"/>
   </TableRow>

   <TableRow>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_3_1"
          android:background="@color/colorGraySoft"
          android:gravity="center"
          android:layout_margin="10dp"
          android:layout_weight="6"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/_3_2"
          android:background="@color/colorGraySoft"
          android:layout_weight="1.5"
          android:layout_margin="10dp"
          android:layout_gravity="center"
          android:gravity="center"/>

   </TableRow>
</TableLayout>
