<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.httpmilenacabrera.organizaciondevistas.Relative2Activity">

    <TextView
        android:id="@+id/cero"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8C8E8C"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/red"
        android:text="@string/red"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_below="@+id/cero"
        android:gravity="center"
        android:background="#ff0000"/>

    <TextView
        android:id="@+id/orange"
        android:text="ORANGE"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="#ffa600"
        android:gravity="center"
        android:layout_below="@+id/cero"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/yellow"
        android:text="@string/yellow"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="#ffff00"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_below="@+id/cero"/>

    <TextView
        android:id="@+id/blue"
        android:text="@string/blue"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="#0000ff"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_below="@+id/orange"/>

    <TextView
        android:id="@+id/violet"
        android:text="@string/violet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ef82ff"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/green"
        android:text="@string/green"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="#00ff00"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/orange"
        android:layout_toStartOf="@+id/blue" />

    <TextView
        android:id="@+id/indigo"
        android:text="@string/indigo"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="#4A0084"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/violet"
        android:layout_toStartOf="@+id/yellow" />

</RelativeLayout>

