<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.httpmilenacabrera.organizaciondevistas.LinearActivity">

     <TextView
         android:onClick="goRelative"
        android:text="@string/ingeniera"
        android:gravity="center"
        android:background="@color/colorAzulClaro"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:onClick="goRelative"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@color/colorAzulVivo">
        <Button
            android:onClick="goRelative"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/colorAmailloPollito"
            android:text="@string/guia"
            android:layout_marginRight="10dp"/>
        <Button
            android:onClick="goRelative"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/colorAmailloPollito"
            android:text="@string/esta"/>
    </LinearLayout>
    <TextView
        android:onClick="goRelative"
        android:text="@string/desactualizado"
        android:gravity="center"
        android:background="@color/colorPurpura"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>

